<resources>
    <string name="title_activity_container" translatable="false">Apheleia</string>
    <string name="ok">OK</string>
    <string name="action_settings">Настройки</string>
    <string name="authorization">Аутентификация…</string>
    <string name="average">Средняя</string>
    <string name="cancel">Отмена</string>
    <string name="cant_get_message">Не удалось получить сообщение</string>
    <string name="cant_get_receivers">Не удалось получить список получателей</string>
    <string name="cant_send_message">Не удалось отправить сообщение</string>
    <string name="check_periods_failed">Не удалось получить информацию о неделях/периодах. Сообщение об ошибке отправлено</string>
    <string name="check_periods_updated">Найден новый период/неделя, обновление данных</string>
    <string name="compose_message">Написать</string>
    <string name="current_student">Текущий ученик:</string>
    <string name="deselect_all">Снять выбор со всех</string>
    <string name="diary">Дневник</string>
    <string name="domain">Адрес школы на Eljur.ru</string>
    <string name="error_grid_not_saved">Нет подключения к сети и выбранный период не сохранён!</string>
    <string name="error_no_receivers">Необходимо выбрать хотя бы одного получателя</string>
    <string name="error_week_not_saved">Нет подключения к сети и выбранная неделя не сохранена!</string>
    <string name="fetch_network_error">Не удалось получить %s из-за ошибки сети, пожалуйста попробуйте позже</string>
    <string name="fetching_message">Получение сообщения…</string>
    <string name="fetching_receivers">Обновление списка получателей…</string>
    <string name="finals">Итоговые оценки</string>
    <string name="from" formatted="false">От кого: %s</string>
    <string name="help">Помощь</string>
    <string name="inbox">Входящие</string>
    <string name="invalid_credentials">Неверные данные</string>
    <string name="invalid_credentials_desc">Неверные имя пользователя или пароль</string>
    <string name="invalid_domain">Неверный адрес школы</string>
    <string name="invalid_domain_desc">Введённый адрес школы не существует или временно недоступен. Пожалуйста, проверьте его корректность</string>
    <string name="loading_data">Получение первоначальных данных…</string>
    <string name="loading_profile">Получение профиля…</string>
    <string name="logging_out">Выход…</string>
    <string name="logout">Выход из аккаунта</string>
    <string name="logout_prompt">Выйти из аккаунта?</string>
    <string name="marks">Текущие оценки</string>
    <string name="message">Сообщение</string>
    <string name="message_sent">Сообщение отправлено</string>
    <string name="messages">Сообщения</string>
    <string name="misc">Другое</string>
    <string name="multiple_receivers">Получателей: %d</string>
    <string name="navigation_drawer_close">Закрыть боковую панель</string>
    <string name="navigation_drawer_open">Открыть боковую панель</string>
    <string name="network_error">Ошибка сети</string>
    <string name="network_error_tip">Проверьте соединение с интернетом или попробуйте позже</string>
    <string name="no">Нет</string>
    <string name="no_diary">Дневник для выбранной недели не найден</string>
    <string name="no_finals">Итоговых оценок не найдено</string>
    <string name="no_homework">● Нет задания</string>
    <string name="no_marks">Оценок для выбранного периода не найдено</string>
    <string name="no_messages">В этой папке нет сообщений</string>
    <string name="no_schedule">Расписание на выбранную неделю не задано</string>
    <string name="offline_mode">Нет подключения. Загружена сохраненная копия</string>
    <string name="overtime">ВП</string>
    <string name="password">Пароль</string>
    <string name="periods">Инфомация о периодах</string>
    <string name="personal">(Индивидуальное)</string>
    <string name="pick_student">Выбор ученика</string>
    <string name="profile">Информация профиля</string>
    <string name="receivers">Получатели</string>
    <string name="refresh">Обновить</string>
    <string name="reinitialization_prompt">"Приложение обнаружило, что Eljur вернул меньше недель в расписании, чем в прошлый раз.\n\nЭто могло быть вызвано началом нового учебного года.\n\nВы хотите провести повторную инициализацию, чтобы начать работу с новым годом?\n\nЕсли вы считаете, что это ошибка, можете проигнорировать это сообщение"</string>
    <string name="reinitialization_title">Возможна смена учебного года</string>
    <string name="reinitialization_warning">Если во время повторной инициализации потеряется соединение с сетью, вы будете деавторизованы, и вам придется войти в аккаунт снова.</string>
    <string name="reinitialize_failed">Во время повторной инициализации, соединение с Eljur было потеряно. Проверьте соединение с интернетом или попробуйте позже.\n\nВам придется войти в приложение заново. Приложение будет закрыто</string>
    <string name="reply_subject_prefix">Re: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="room">Кабинет</string>
    <string name="schedule">Расписание</string>
    <string name="select_all">Выбрать всех</string>
    <string name="send">Отправить</string>
    <string name="sending_message">Отправка сообщения…</string>
    <string name="sent">Отправленные</string>
    <string name="sing_in">Войти</string>
    <string name="subject">Тема</string>
    <string name="switch_time_period">Смена временного периода</string>
    <string name="teacher">Учитель</string>
    <string name="text">Сообщение</string>
    <string name="time_unknown">Время неизвестно</string>
    <string name="to" formatted="false">Кому: %s</string>
    <string name="to_many" formatted="false">Кому: %s и другие (%d)</string>
    <string name="toggle_folder">Сменить папку</string>
    <string name="unupported_role">Приложение поддерживает только аккаунты учеников и родителей</string>
    <string name="username">Имя пользователя</string>
    <string name="vacation">Выходной</string>
    <string name="viewing_message">Просмотр сообщения</string>
    <string name="what_is_school_domain">Адрес школы - это часть адреса сайта журнала вашей школы перед \".eljur.ru\".\n\nНапример: Для журнала с адресом \"<b>example1</b>.eljur.ru\", адрес будет \"<b>example1</b>\"</string>
    <string name="yes">Да</string>
    <string name="you">Вы</string>
    <string name="multiple_new_messages">Новых сообщений: %d</string>
    <string name="pref_enable_watcher">Следить за новыми сообщениями</string>
    <string name="check_periods">Синхронизировать недели/периоды</string>
    <string name="check_periods_error">Не удалось синхронизировать недели/периоды из-за ошибки сети</string>
    <string name="check_periods_no_change">Изменений в неделях/периодах не обнаружено</string>
    <string name="dont_enable">Не включать</string>
    <string name="enable">Включить</string>
    <string name="got_it">Понятно</string>
    <string name="warning">Предупреждение</string>
    <string name="pref_watcher_allow_cell">Моб. сеть для проверки сообщений</string>
    <string name="watcher_first_check_warning">Первая проверка на наличие новых сообщений примет все ваши непрочитанные сообщения за новые</string>
    <string name="watcher_traffic_warning">Проверка сообщений через мобильную сеть сильно увеличит расход вашего мобильного интернет-трафика.\n\nЗА КАЖДОЕ имеющееся у вас непрочитанное сообщение, будет расходоваться до 1.5 мегабайт трафика в месяц (1.5 выйдет, если вы постоянно используете только моб. сеть). \"Каждое\" подразумевает ВООБЩЕ ВСЕ непрочитанные сообщения, даже старые.</string>
    <string name="watcher_desc">Это приложение не может получать мгновенные уведомления о сообщениях как официальное приложение.\n\nТем не менее, приложение может переодически проверять наличие новых сообщений, однако это немного увеличит расход батареи, а также увеличит расход интернет-трафика пропорционально общему количеству ваших непрочитанных сообщений, поэтому по умолчанию будет использоваться только WIFI-подключение, но вы можете разрешить моб. сеть в настройках.\n\nЕсли у вас много непрочитанных сообщений и вы хотите использовать эту функцию, я крайне рекомендую использовать опцию \"Отметить все как прочитанные\" на сайте Eljur.\n\nВы хотите использовать данную функцию? Вы всегда можете изменить выбор в настройках.</string>
    <string name="pref_show_tut">Показать обучение</string>
    <string name="tut">Обучение</string>
    <string name="tut_short">1. Оценки с комментарием обведены в круг, нажмите на них, чтобы увидеть комментарий\n\n2. Если началась новая неделя, но её не видно в приложении, попробуйте выбрать \"Синхронизировать недели/периоды\" в меню (которое открывается нажатием на три точки сверху справа)\n\n3. Чтобы переключать папки сообщений (входящие/исходящие), нажмите на кнопку сверху справа возле \"троеточия\"\n\n4. В дневнике и расписании, вы можете быстро пролистать список до определенного дня недели, нажав на название нужного дня в нижней панели\n\n5. Если вы родитель, то чтобы сменить текущего ученика, нажмите на кнопку возле имени текущего ученика в боковой панели\n\nВы всегда можете открыть это обучение из настроек</string>
    <string name="token_expired">Ключ доступа истёк, требуется повторная авторизация</string>
    <string name="privacy_policy_notice">Используя приложение, вы соглашаетесь с <b><a href="https://aefyr.github.io/apheleia/privacy_ru.html">политикой конфиденциальности</a></b></string>
    <string name="first_launch_warn"><b>Аналитика и конфиденциальность:</b>\nЭто приложение использует Google Analytics, а также Firebase Crashlytics чтобы собирать анонимные данные об использовании программы и сообщать разработчику об ошибках. Собранные данные используются для исправления ошибок и улучшения приложения.</string>
    <string name="app_name">ЭлЖур</string>
    <string name="error_wrong_rules">Не удается обработать ваш профиль</string>
    <string name="error">Ошибка</string>
    <string name="error_api">Не удалось обработать данные, полученные от Eljur</string>
    <string name="pref_group_ui">Интерфейс</string>
    <string name="pref_quick_picker">Быстрый выбор дня недели</string>
    <string name="quick_picker_warn">Изменения вступят в силу после перезапуска приложения</string>
    <string name="no_periods">У этого учащегося отсутствуют недели/периоды.\n\nПопробуйте синхронизировать их из выпадающего меню справа сверху</string>
    <string name="error_api_access_forbidden">Сервер школы отклонил запрос на авторизацию\n\n(Это не значит, что логин/пароль не верны)</string>
    <string name="pref_watcher_desc">Каждые полчаса выполняет проверку на наличие новых сообщений и сообщает вам о них</string>
    <string name="pref_watcher_via_cell_desc">По умолчанию для проверки используется только WiFi</string>
    <string name="pref_quick_picker_desc">В Дневнике и Расписании, показывает внизу панель с помощью которой можно быстро переместиться к любому дню недели в списке</string>
    <string name="sending_error">При отправке сообщения возникла ошибка</string>
    <string name="system_notification">Сообщение от разработчика</string>
    <string name="sys_notification_delay">Через 5 секунд</string>
    <string name="send_confirmation">Отправить сообщение?</string>
    <string name="eljur_connection_error">Не удалось подключится к ЭлЖуру</string>
    <string name="eljur_connection_error_desc">Пожалуйста проверьте, правильно ли вы ввели адрес вашей школы на ЭлЖур, а также наличие у вас интернет-подключения</string>
    <string name="privacy_policy_url">https://aefyr.github.io/apheleia/privacy_ru.html</string>
    <string name="privacy_policy">Политика Конфиденциальности</string>
    <string name="pref_calculate_average">Считать средний балл</string>
    <string name="pref_calculate_average_desc">Рассчитывать средний бал в разделе Текущие оценки на устройстве вместо использования значения от ЭлЖур. Точность не гарантируется</string>
</resources>