<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_group_ui">
        <SwitchPreference
            android:defaultValue="true"
            android:key="quick_day_picker_enabled"
            android:summary="@string/pref_quick_picker_desc"
            android:title="@string/pref_quick_picker" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/messages">
        <SwitchPreference
            android:defaultValue="false"
            android:key="watcher_enabled"
            android:summary="@string/pref_watcher_desc"
            android:title="@string/pref_enable_watcher" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="allow_watcher_with_cell"
            android:summary="@string/pref_watcher_via_cell_desc"
            android:title="@string/pref_watcher_allow_cell" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/misc">
        <Preference android:title="@string/pref_show_tut" android:key="show_tut"/>
        <Preference android:title="@string/privacy_policy">
            <intent android:action="android.intent.action.VIEW" android:data="@string/privacy_policy_url"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Debug" android:key="debug">
        <Preference android:title="Override current week" android:key="debug_override_week"/>
        <Preference android:title="Override current period" android:key="debug_override_period" />
        <Preference android:title="FCM Token" android:key="debug_fcm_token"/>
        <SwitchPreference android:title="Demo Name in Nav Header" android:key="debug_fake_name" android:defaultValue="false"/>
        <Preference android:title="Дамп Дневника" android:key="debug_dump_diary"/>
    </PreferenceCategory>
</PreferenceScreen>