<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
            android:title="@string/diary" />
        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/marks" />
        <item android:id="@+id/nav_finals"
            android:icon="@drawable/ic_flag_black_24dp"
            android:title="@string/finals"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/messages" />
    </group>

    <item android:title="@string/misc">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_clear_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
